--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+ 
+  <link rel="stylesheet" type="text/css"  href="https://fonts.googleapis.com/css2?family=Inter">
+
   {% seo title=false %}
 
   <title>
