--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-	font-family: system-ui, sans-serif;
+	font-family: 'Inter', sans-serif;
 	-webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
 	line-height:1.5;
