--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -8,7 +8,7 @@
 
 body {
 	font-family: 'Inter', sans-serif;
-    font-feature-settings: "ss01";
+    font-feature-settings: "ss01", "tnum";
 	-webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
 	line-height:1.5;
