--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -162,7 +162,7 @@ strong, b {
 main {
 	display:flex;
 	flex-wrap:wrap;
-	max-width:60rem;
+	max-width:42rem;
 	margin:2rem auto;
 	padding:1rem;
 }
@@ -201,4 +201,8 @@ section {
 
 figcaption {
     font-size: smaller;
+}
+
+kaki {
+    text-align: center;
 }
