--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -13,7 +13,7 @@ layout: compress
     </main>
     <kaki>
     <hr style="width:25vw;text-align:center;height:1px;background-color=gainsboro;margin:auto;">
-    <p style="margin-bottom:5vh;margin-top:2em"><a href="/">Arsip</a>&emsp;·&emsp;<a href="/about">Tentang</a>&emsp;·&emsp;<a href="/atom.xml">RSS</a></p>
+    <p style="margin-bottom:5vh;margin-top:2em"><a href="/archive">Arsip</a>&emsp;·&emsp;<a href="/about">Tentang</a>&emsp;·&emsp;<a href="/atom.xml">RSS</a></p>
     </kaki>
 </body>
 </html>
