finished prelim commit for homepage

--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -8,7 +8,9 @@ layout: compress
   <body>
     <main role="main">
 	    
-        {{ content }}
+<section class="post">
+  {{ content }}
+</section>
         	    
     </main>
 </body>
