--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,6 +1,6 @@
 *,:after,:before {
 	box-sizing:border-box;
-	background-color:inherit;
+	background-color: #white;
 	color: inherit;
 	margin:0;
 	padding:0;
@@ -14,6 +14,12 @@ body {
 	line-height:1.5;
 	font-size: 1.2rem;
 	color: #222;
+}
+
+.footnotes {
+margin-top: 2rem;
+border-top: 1px solid silver;
+font-size: 1rem;
 }
 
 nav ul {
@@ -217,3 +223,10 @@ frontpage {
     flex-flow: row wrap;
 }
 
+.callout {
+padding: 0.75rem;
+margin: 0.5rem 0;
+border-left-style: solid;
+border-left-width: 5px;
+border-left-color: #0087bd;
+}
