--- a/_layouts/articleblank.html
+++ b/_layouts/articleblank.html
@@ -10,11 +10,10 @@ layout: compress
 	    
         {{ content }}
         	    
+        <div class="myfooter">
+            <p><a href="/archive">Archive</a>&emsp;·&emsp;<a href="/about">About</a>&emsp;·&emsp;<a href="/atom.xml">RSS</a></p>
+    </div>
     </main>
-    <kaki>
-    <hr style="width:25vw;text-align:center;height:1px;background-color=gainsboro;margin:auto;">
-    <p style="margin-bottom:5vh;margin-top:2em"><a href="/archive">Archive</a>&emsp;·&emsp;<a href="/about">About</a>&emsp;·&emsp;<a href="/atom.xml">RSS</a></p>
-    </kaki>
 </body>
 </html>
 
