edit footer and about page

--- a/_layouts/articleblank.html
+++ b/_layouts/articleblank.html
@@ -10,9 +10,10 @@ layout: compress
 	    
         {{ content }}
         	    
-        <div class="myfooter">
-            <p><a href="/archive">Archive</a>&emsp;·&emsp;<a href="/about">About</a>&emsp;·&emsp;<a href="/atom.xml">RSS</a></p>
-    </div>
+        <footer>
+            <p><a href="/archive">Archive</a>&emsp;·&emsp;<a href="/about">About</a>&emsp;·&emsp;<a href="/atom.xml">RSS</a><br/>
+            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a></p>
+    </footer>
     </main>
 </body>
 </html>
