--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -101,7 +101,7 @@ header a.active {
     color: #335E82;
 }
 
-header,section {
+header,section,footer {
 	padding:1rem;
 }
 
@@ -227,12 +227,34 @@ border-left-width: 5px;
 border-left-color: #0087bd;
 }
 
-.myfooter {
-    display: flex;
-    align-content: center;
+footer {
 margin-top: 2em;
 margin-bottom: 5vh;
 border-top: 1px solid silver;
+width: 100%;
+text-align: center;
+}
+
+/* for work index page */
+.work-gallery {
+width: 100%;
+display: grid;
+grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+justify-content: center;
+padding: 4px;
+}
+
+.boxen {
+flex-basis: 25%;
+width: 100%;
+padding: 10px;
+margin: 2px;
+}
+
+.werke {
+width: 100%;
+height: 200px;
+object-fit: cover;
 }
 
 
