--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -236,25 +236,22 @@ text-align: center;
 }
 
 /* for work index page */
-.work-gallery {
-width: 100%;
-display: grid;
-grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-justify-content: center;
-padding: 4px;
+.wthumb-container {
+position: relative;
 }
 
-.boxen {
-flex-basis: 25%;
+.titling {
+position: absolute;
+bottom: 0;
+background: rgb(0,0,0);
+background: rgba(0,0,0,0.5);
+color: #f1f1f1;
 width: 100%;
-padding: 10px;
-margin: 2px;
+opacity: 0;
+color: white;
+padding: 15px;
 }
 
-.werke {
-width: 100%;
-height: 200px;
-object-fit: cover;
+.wthumb-container:hover .titling {
+opacity: 1;
 }
-
-
