change font to Source Sans 3 from jsdelivr, and general layout changes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://rsms.me/">
-  <link rel="stylesheet" type="text/css"  href="https://rsms.me/inter/inter.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/source-sans-pro@3.6/source-sans-pro.min.css">
 
   {% seo title=false %}
 
