--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -76,7 +76,10 @@ img {
 }
 
 figure {
-max-width:100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+max-width: 100%;
 float: none;
 }
 
