--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-	font-family: 'Source Sans 3', 'Helvetica', 'Arial', sans-serif;
+	font-family: 'Source Sans Pro', 'Helvetica', 'Arial', sans-serif;
     font-feature-settings: 'tnum', 'onum';
 	-webkit-font-smoothing: antialiased;
    font-optical-sizing: auto;
