--- a/_layouts/articleblank.html
+++ b/_layouts/articleblank.html
@@ -2,19 +2,25 @@
 layout: compress
 ---
 
-<!DOCTYPE html>
-<html lang="en" >
-  {% include head.html %}  
+<!doctype html>
+<html lang="en">
+  {% include head.html %}
   <body>
     <main role="main">
-	    
-        {{ content }}
-        	    
-        <footer>
-            <p><a href="/archive">Archive</a>&emsp;·&emsp;<a href="/about">About</a>&emsp;·&emsp;<a href="/atom.xml">RSS</a><br/>
-            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a></p>
-    </footer>
-    </main>
-</body>
-</html>
+      {{ content }}
 
+      <footer>
+        <p>
+          <a href="/archive">Archive</a>&emsp;·&emsp;<a href="/about">About</a
+          >&emsp;·&emsp;<a href="/atom.xml">RSS</a><br />
+          <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"
+            ><img
+              alt="Creative Commons License"
+              style="border-width: 0"
+              src="https://i.creativecommons.org/l/by/4.0/80x15.png"
+          /></a>
+        </p>
+      </footer>
+    </main>
+  </body>
+</html>
