--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -1,12 +1,9 @@
 ---
-layout: articleblank 
+layout: articleblank-works
 ---
 
 <section class="post">
-    <span style="font-size:1rem">{{ page.kala }}</span>
+  <span style="font-size: 1rem">{{ page.kala }}</span>
   <h2>{{ page.title }}</h2>
   {{ content }}
 </section>
-
-
-
